web socket configuration